// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TypedColourPicker /> > renders HexColorPicker for HEX type and matches snapshot 1`] = `
<div>
  <div
    class="react-colorful _editorColourPicker_cffd98"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(255, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 100%, Brightness 100%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 0%; left: 100%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(255, 0, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuemax="360"
        aria-valuemin="0"
        aria-valuenow="0"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 0%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(255, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TypedColourPicker /> > renders RgbStringColorPicker for RGB type and matches snapshot 1`] = `
<div>
  <div
    class="react-colorful _editorColourPicker_cffd98"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 255, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 100%, Brightness 100%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 0%; left: 100%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 255, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuemax="360"
        aria-valuemin="0"
        aria-valuenow="120"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 33.33333333333333%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 255, 0);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
